// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header test 로그인 되어있다면 1`] = `
<div>
  <nav>
    <div
      className="nav-wrapper blue darken-1"
    >
      <Link
        className="brand-logo center"
        replace={false}
        to="/"
      >
        5437
      </Link>
      <ul>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            <i
              className="material-icons"
            >
              search
            </i>
          </Link>
        </li>
      </ul>
      <div
        className="right"
      >
        <ul>
          <Dropdown
            trigger={
              <Button
                node="button"
              >
                g1
                (화살표)!
              </Button>
            }
          >
            <li>
              <Link
                replace={false}
                to="/settings"
              >
                 정보수정 
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/broadcast"
              >
                방송국
              </Link>
            </li>
          </Dropdown>
          <li>
            <a>
              <i
                className="material-icons"
              >
                lock_open
              </i>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <nav>
    <div
      className="nav-wrapper blue darken-1"
    >
      <ul>
        <li>
          <Link
            replace={false}
            to="/streamingList"
          >
            전체
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            팔로우
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            스토리보드
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            클립
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            소통
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            커뮤니티
          </Link>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Header test 로그인 되어있지 않다면 1`] = `
<div>
  <nav>
    <div
      className="nav-wrapper blue darken-1"
    >
      <Link
        className="brand-logo center"
        replace={false}
        to="/"
      >
        5437
      </Link>
      <ul>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            <i
              className="material-icons"
            >
              search
            </i>
          </Link>
        </li>
      </ul>
      <div
        className="right"
      >
        <ul>
          <li>
            <Link
              replace={false}
              to="/login"
            >
              <i
                className="material-icons"
              >
                vpn_key
              </i>
            </Link>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <nav>
    <div
      className="nav-wrapper blue darken-1"
    >
      <ul>
        <li>
          <Link
            replace={false}
            to="/streamingList"
          >
            전체
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            팔로우
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            스토리보드
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            클립
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            소통
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/moonlight"
          >
            커뮤니티
          </Link>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
